--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ li div {
   border: 1px solid brown;
   background-color: beige;
   color: #724C21;
-  width: 200px;
-  height: 150px;
+  width: 300px;
+  min-height: 150px;
   display: block;
 }
